--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ethereum-cryptography": "^2.1.0",
+    "ethers": "^6.6.3",
     "express": "^4.18.1"
   },
   "devDependencies": {
